--- a/package.json
+++ b/package.json
@@ -13,10 +13,17 @@
     "@expo/webpack-config": "^18.0.1",
     "@react-native-async-storage/async-storage": "1.17.11",
     "@react-native-community/masked-view": "^0.1.11",
+    "@react-native-firebase/app": "^17.5.0",
     "@react-navigation/bottom-tabs": "^6.5.7",
     "@react-navigation/native": "^6.1.6",
+    "@react-navigation/native-stack": "^6.9.12",
     "expo": "^48.0.9",
     "expo-status-bar": "~1.4.4",
+    "firebase": "^9.22.1",
+    "jest-worker": "^29.5.0",
+    "metro-file-map": "^0.76.5",
+    "mysql": "^2.18.1",
+    "mysql2": "^3.3.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.71.4",
@@ -30,5 +37,7 @@
     "@babel/core": "^7.20.0",
     "@babel/preset-env": "^7.22.4"
   },
-  "private": true
+  "resolutions": {
+    "@babel/preset-env": "^7.15.4"
+  }
 }
